# slidingWindow_msckf

./: CMakeLists.txt  README.md  package.xml
config/: config.yaml
include/: msckf.h
include/algorithm/: residual.h
include/exceptions/: base_exception.h  calibration_file_error.h  general_exception.h  impossible_exception.h  readme.txt
include/feature/: feature.h  readme.txt  tracker.h
include/frame/: frame.h
include/imu/: imu.h  sensorflow.h
include/state/: readme.txt
include/utils/: JPLquaternion.h  calibration.h  readme.txt
src/: main.cpp  msckf.cpp
src/algorithm/: readme.txt  residual.cpp
src/exceptions/: general_exception.cpp  impossible_exception.cpp
src/feature/: feature.cpp  tracker.cpp
src/filter/: readme.txt
src/frame/: frame.cpp  readme.txt
src/imu/: imu.cpp  readme.txt  sensorflow.cpp
src/utils/: JPLquaternion.cpp  calibration.cpp
