<package>
    <!-- Package Metadata -->
    <name>msckf</name>
    <maintainer email="dongxuanlizju@gmail.com">Doom</maintainer>
    <description>
        A MSCKF framework using ROS.
    </description>
    <version>0.0.0</version>
    <license>BSD</license>

    <!-- Required by Catkin -->
    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>cmake_modules</build_depend>
    <build_depend>eigen</build_depend>
    <build_depend>tf2_ros</build_depend>
    <build_depend>eigen_conversions</build_depend>

    <run_depend>cmake_modules</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>tf2</run_depend>
    <run_depend>tf2_ros</run_depend>
    <run_depend>eigen_conversions</run_depend>
</package>
